# tax_pro

./: IMPLEMENTATION_GUIDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
tax_pro/: hooks.py  modules.txt  patches.txt
tax_pro/patches/v0_0/: add_feature_2_to_settings.py  create_tax_pro_settings.py
tax_pro/public/js/: quotation.js  sales_invoice.js  sales_order.js  taxes_and_totals_override.js
tax_pro/tax_pro/: __init__.py  install.py
tax_pro/tax_pro/doctype/sales_taxes_and_charges/: sales_taxes_and_charges.json  sales_taxes_and_charges.py
tax_pro/tax_pro/doctype/tax_pro_settings/: __init__.py  tax_pro_settings.json  tax_pro_settings.py
tax_pro/tax_pro/overrides/: __init__.py  taxes_and_totals.py
tax_pro/tax_pro/utils/: profit_margin_item.py  serial_profit.py
